--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@angular/core": "~11.2.9",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.9",
+    "@angular/localize": "~11.2.9",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "bootstrap": "^4.5.0",
     "firebase": "^8.2.3",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.4.1",
     "sweetalert2": "^11.4.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
